fixed ugly border on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -66,8 +66,8 @@
         top: 9px;
         right: 30px;
         background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
+        border: 0px solid $grey-color-light;
+        border-radius: 0px;
         text-align: right;
 
         .menu-icon {
